design/pattern-lab/public/css/components/site-header.css
.site-header {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: grid;
  grid-template-columns: calc((100vw - 1700px) / 2) minmax(140px, 20%) auto calc((100vw - 1700px) / 2);
  grid-template-rows: minmax(0, 1fr);
  column-gap: 0.75rem;
  row-gap: 0.75rem;
  width: 100%;
  padding-top: 0.75rem;
  background-color: var(--esl-color-white);
}
.site-header a {
  color: currentcolor;
}
.site-header a:hover {
  color: var(--color-secondary);
}
.site-header__logo {
  grid-column: 2/3;
  grid-row: 1/2;
  width: 100%;
  max-width: 500px;
  max-height: 120px;
}
.site-header__menu {
  position: static;
  grid-column: 2/4;
  grid-row: 2/3;
  margin-right: -0.375rem;
}
.site-header__addl {
  color: currentcolor;
}
.site-header__contact li {
  flex-basis: auto;
  flex-grow: 0;
  margin: 0;
}

@media (max-width: 767px) {
  .site-header__menu {
    margin-top: -3rem;
  }
  .site-header__menu > .menu__content {
    max-height: calc(100vh - 3rem - 0.375rem);
    overflow-y: auto;
  }
  .site-header__menu > .menu__content .o-collapse__body {
    margin-top: 0.75rem;
  }
  .site-header__addl {
    grid-column: 1/5;
    grid-row: 3/4;
    flex-wrap: wrap;
    margin-top: 0 !important;
    padding: 0.75rem;
    background-color: var(--color-primary);
    color: var(--esl-color-white);
  }
  .site-header__addl a {
    color: var(--esl-color-white);
    text-decoration-color: rgba(255, 255, 255, 0.25);
  }
  .site-header__addl--hide {
    display: none;
  }
}
@media (min-width: 768px) {
  .site-header {
    column-gap: 3rem;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }
  .site-header__logo {
    grid-row-end: 3;
    align-self: center;
  }
  .site-header__menu {
    grid-column: 3/4;
    grid-row-start: 2;
    justify-self: end;
    margin-right: -1.125rem;
  }
  .site-header__menu .o-switcher {
    --breakpoint: 0;
  }
  .site-header__addl {
    grid-column: 3/4;
    grid-row: 1/2;
    justify-self: end;
    align-self: center;
    margin-top: 0;
  }
}
@media (min-width: 992px) {
  .site-header {
    top: -1.875rem;
  }
  .site-header.stuck {
    grid-template-columns: 0 minmax(140px, 12.5%) 1fr auto 0;
    column-gap: 1.125rem;
    row-gap: 3rem;
    padding-top: 1.875rem;
    padding-bottom: 0;
  }
  .site-header.stuck {
    font-size: 0.9128709292rem;
  }
}
@media (min-width: 992px) and (min-width: 768px) {
  .site-header.stuck {
    font-size: calc(0.9128709292rem + ((1vw - 7.68px) * -0.046693008));
  }
}
@media (min-width: 992px) and (min-width: 1400px) {
  .site-header.stuck {
    font-size: 0.894427191rem;
  }
}
@media (min-width: 992px) {
  .site-header.stuck .site-header__logo {
    grid-column: 2/3;
    grid-row: 1/1;
    margin: 1.125rem 0;
  }
}
@media (min-width: 992px) {
  .site-header.stuck .site-header__menu,
.site-header.stuck .site-header__addl {
    align-self: center;
    font-size: inherit;
  }
}
@media (min-width: 992px) {
  .site-header.stuck .site-header__menu {
    grid-column: 4/5;
    grid-row: 1/1;
    margin: 0;
  }
  .site-header.stuck .site-header__menu .menu__content {
    font-size: inherit;
  }
}
@media (min-width: 992px) {
  .site-header.stuck .site-header__addl {
    grid-column: 3/4;
    grid-row: 1/1;
    justify-self: center;
    align-self: center;
    margin: 0;
  }
  .site-header.stuck .site-header__addl--hide {
    display: none;
  }
}
@media (min-width: 992px) {
  .site-header.stuck .site-header__contact {
    font-size: inherit;
  }
}
.site-header--corporate {
  background-color: var(--esl-color-blue);
  color: var(--esl-color-white);
}
.site-header--corporate .site-header__menu {
  text-transform: uppercase;
}
.site-header--corporate .site-header__menu nav a {
  color: var(--esl-color-white);
}
.site-header--corporate .site-header__menu nav a:hover {
  color: var(--esl-color-white);
}
.site-header--corporate .site-header__menu nav > ul > :not(:first-child),
.site-header--corporate .site-header__menu nav > ol > :not(:first-child) {
  border-left: none;
}
.site-header--corporate .menu__submenu {
  display: none;
}

@media (min-width: 768px) {
  .site-header--corporate .site-header__menu {
    grid-column: 1/5;
    grid-row: 5;
    margin-right: unset;
    margin-bottom: -0.75rem;
    justify-self: auto;
  }
  .site-header--corporate .site-header__menu nav > ul > li,
.site-header--corporate .site-header__menu nav > ol > li {
    position: relative;
  }
  .site-header--corporate .site-header__menu nav > ul > li:hover,
.site-header--corporate .site-header__menu nav > ol > li:hover {
    background-color: var(--esl-color-white);
  }
  .site-header--corporate .site-header__menu nav > ul > li:hover a,
.site-header--corporate .site-header__menu nav > ol > li:hover a {
    text-decoration: none;
    color: var(--color-primary);
  }
  .site-header--corporate .site-header__menu nav > ul > li > a,
.site-header--corporate .site-header__menu nav > ol > li > a {
    display: block;
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
    text-transform: uppercase;
    transition-property: none;
  }
}

